--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -3,7 +3,7 @@
     <form action="{{ url_for('add_todo') }}" method="post">
         {{ form.csrf_token }}
         <dl>
-            <dd>{{ form.title(size=50) }} {{ render_error(form.title) }}</dd>
+            <dd>{{ form.title(size=50,placeholder="What do you want to do?") }} {{ render_error(form.title) }}</dd>
             <dd><input type="submit" value="Add todo"/></dd>
         </dl>
     </form>
