Got started on the frontend

--- a/todos/templates/layout/layout.html
+++ b/todos/templates/layout/layout.html
@@ -1,6 +1,7 @@
 <!doctype html>
     <head>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+        <script data-main="/static/js/main" src="/static/js/lib/require.js"></script>
         <title>Awesome todos</title>
     </head>
     <body>    
