--- a/todos/static/css/style.css
+++ b/todos/static/css/style.css
@@ -21,6 +21,10 @@ h2 {
     font-size: 1.2em;
 }
 
+ul {
+  list-style: none;
+}
+
 .wrapper {
     margin: 2em auto;
     width: 35%;
@@ -33,6 +37,120 @@ h2 {
     background: #F0D6D6;
     padding: 0.5em;
 }
+
+#todo_title {
+    width: 70%;
+    font-size: 18px;
+    font-family: inherit;
+    line-height: 1em;
+    border: 0;
+    outline: none;
+    padding: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
+    border: 1px solid #999999;
+    -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+    -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+}
+
+#add_button {
+    width: 25%;
+    margin-left: 20px;
+    padding: 5px;
+    background-color: #dad9d8;  
+    cursor: pointer;
+}
+
+#todo_list {
+  padding-left: 10px;
+  margin-top: 10px;
+}
+#todo_list li {
+padding: 12px 20px 11px 0;
+position: relative;
+font-size: 18px;
+line-height: 1em;
+}
+#todo_list li:after {
+  content: "\0020";
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+#todo_list li.editing {
+  padding: 0;
+  border-bottom: 0;
+}
+#todo_list .editing .display,
+#todo_list .edit {
+display: none;
+}
+#todo_list .editing .edit {
+  display: block;
+}
+#todo_list .editing input {
+  width: 444px;
+  font-size: 24px;
+  font-family: inherit;
+  margin: 0;
+  line-height: 1.6em;
+  border: 0;
+  outline: none;
+  padding: 10px 7px 0px 27px;
+  border: 1px solid #999999;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+}
+#todo_list .check {
+position: relative;
+top: 9px;
+margin: 0 10px 0 7px;
+float: left;
+}
+#todo_list .done .todo-text {
+text-decoration: line-through;
+color: #777777;
+}
+
+#todo_stats {
+  *zoom: 1;
+  margin-top: 10px;
+  color: #777777;
+}
+#todo_stats:after {
+    content: "\0020";
+    display: block;
+    height: 0;
+    clear: both;
+    overflow: hidden;
+    visibility: hidden;
+}
+#todo_stats .todo_count {
+    float: left;
+}
+#todo_stats .todo_count .number {
+    font-weight: bold;
+    color: #333333;
+}
+#todo_stats .todo_clear {
+float: right;
+}
+#todo_stats .todo_clear a {
+  color: #777777;
+  font-size: 12px;
+}
+  #todo_stats .todo_clear a:visited {
+    color: #777777;
+  }
+  #todo_stats .todo_clear a:hover {
+    color: #336699;
+  }
 
 footer {
     clear:both;
