--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -1,17 +1,17 @@
 {% extends "layout/layout.html" %}
 {% block body %}
-    <form action="{{ url_for('add_todo') }}" method="post">
-        {{ form.csrf_token }}
-        <dl>
-            <dd>{{ form.title(size=50,placeholder="What do you want to do?") }} {{ render_error(form.title) }}</dd>
-            <dd><input type="submit" value="Add todo"/></dd>
-        </dl>
-    </form>
-    <div class="items">
-    <ul> 
-     {% for item in items %}
-            <li class="item">{{ item }}</li>
-     {% endfor %}
-    </ul>
+	<div id="todos_app">
+        <div id="create_todo">
+            <input id="todo_title" placeholder="What do you want todo?" type="text" />
+           <span id="add_button"><a>Add Todo</a></span>
+        </div>
+        <div id="todos">
+            <ul id="todo_list"> 
+             {% for item in items %}
+                    <li>{{ item }}</li>
+             {% endfor %}
+            </ul>
+       </div>
+        <div id="todo_stats"></div>
    </div>
 {% endblock %}
