Mark all items complete feature and pretty checkboxes

--- a/todos/static/css/style.css
+++ b/todos/static/css/style.css
@@ -1,10 +1,9 @@
 body {
-    font-family: sans-serif;
+    font-family: 'PT Sans', serif;
     background: #f6f5f5;
 }
 
 h1,h2 {
-    font-family: 'PT Sans', serif;
     padding-top: 25px;
     padding-bottom: 25px;
     margin: 0;
@@ -42,10 +41,9 @@ ul {
 
 #todo_title {
     width: 65%;
-    font-size: 18px;
+   font-size: 18px;
     font-family: inherit;
     line-height: 1em;
-    border: 0;
     outline: none;
     padding: 5px;
     margin-top: 20px;
@@ -77,19 +75,21 @@ ul {
   margin-top: 10px;
 }
 #todo_list li {
-padding: 12px 20px 11px 0;
-position: relative;
-font-size: 18px;
-line-height: 1em;
+    padding: 12px 20px 11px 0;
+    position: relative;
+    font-size: 18px;
+    line-height: 1em;
 }
+/*
 #todo_list li:after {
-  content: "\0020";
+#  content: "\0020";
   display: block;
   height: 0;
   clear: both;
   overflow: hidden;
   visibility: hidden;
 }
+*/
 #todo_list li.editing {
   padding: 0;
   border-bottom: 0;
@@ -116,13 +116,43 @@ display: none;
   -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
   box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
 }
-#todo_list .check {
-position: relative;
-top: 9px;
-margin: 0 10px 0 7px;
-float: left;
+
+input[type="checkbox"] {
+    display:none;
 }
-#todo_list .done .todo-text {
+#todo_list .checkbox {
+    top: 3px;
+    background-color: #fafafa;
+    border: 1px solid #cacece;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    padding: 10px;
+    border-radius: 3px;
+    display: inline-block;
+    position: relative;
+}
+
+#todo_list .done .checkbox {
+    background-color: #e9ecee;
+    border: 1px solid #adb8c0;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+    color: #99a1a7;
+}
+#todo_list .done .checkbox:after {
+    content: '\2713';
+    font-size: 25px;
+    position: absolute;
+    top: 0px;
+    left: 3px;
+    color: #003366;
+}
+#todo_list .done .checkbox {
+    background-color: #0099cc;
+}
+
+#todo_list .todo_title {
+    display: inline-block;
+}
+#todo_list .done .todo_title {
 text-decoration: line-through;
 color: #777777;
 }
