--- a/todos/static/templates/stats.html
+++ b/todos/static/templates/stats.html
@@ -4,11 +4,8 @@
     <span class="word"><%= remaining == 1 ? 'item' : 'items' %></span> left.
 </span>
 <% } %>
-<% if (done) { %>
 <span class="todo_clear">
     <a href="#">
-        Clear <span class="number_done"><%= done %></span>
-        completed <span class="word_done"><%= done == 1 ? 'item' : 'items' %></span>
+        Mark all items complete
     </a>
 </span>
-<% } %>
