--- a/todos/static/css/style.css
+++ b/todos/static/css/style.css
@@ -28,7 +28,6 @@ ul {
     margin: 2em auto;
     width: 30%;
     border: 1px solid #ccc;
-    padding: 0.8em;
     background: white;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -39,11 +38,15 @@ ul {
     padding: 0.5em;
 }
 
+#create_todo {
+     padding: 5px;
+}
+
 #todo_title {
     width: 65%;
-   font-size: 18px;
+    font-size: 18px;
     font-family: inherit;
-    line-height: 1em;
+    line-height: 1.3em;
     outline: none;
     padding: 5px;
     margin-top: 20px;
@@ -71,15 +74,19 @@ ul {
 }
 
 #todo_list {
-  padding-left: 10px;
+  display: block;
+  padding: 0px;
+  margin-left: 0px;
   margin-top: 10px;
 }
-#todo_list li {
+
+/*#todo_list li {
     padding: 12px 20px 11px 0;
     position: relative;
     font-size: 18px;
     line-height: 1em;
 }
+*/
 /*
 #todo_list li:after {
 #  content: "\0020";
@@ -102,12 +109,11 @@ display: none;
   display: block;
 }
 #todo_list .editing input {
-  width: 444px;
+  width: 65%;
   font-size: 24px;
   font-family: inherit;
   margin: 0;
   line-height: 1.6em;
-  border: 0;
   outline: none;
   padding: 10px 7px 0px 27px;
   border: 1px solid #999999;
@@ -148,18 +154,38 @@ input[type="checkbox"] {
 #todo_list .done .checkbox {
     background-color: #0099cc;
 }
+#todo_list .todo {
+    margin-left: 0px;
+    padding: 12px 20px 11px 12px;
+    position: relative;
+    font-size: 18px;
+    line-height: 1em;
+}
+
+#todo_list .blue {
+    background-color:rgba(204,204,255,0.5);
+}
 
 #todo_list .todo_title {
     display: inline-block;
+    width: 90%;
+}
+#todo_list .todo_title:after {
+    float: right;
+    content: '\2630';
+    font-size: 18px;
+    color: #777777;
 }
 #todo_list .done .todo_title {
 text-decoration: line-through;
 color: #777777;
 }
 
+
 #todo_stats {
   *zoom: 1;
   margin-top: 10px;
+  padding: 10px;
   color: #777777;
 }
 #todo_stats:after {
