--- a/todos/static/templates/item.html
+++ b/todos/static/templates/item.html
@@ -1,6 +1,6 @@
-<div class="todo <%= done ? 'done' : '' %>">
+<div class="todo <%= done ? 'done' : '' %> <%= id%2 ? '' : 'blue' %>">
     <div class="display">
-        <span class="checkbox check"  <%= done ? 'checked="checked"' : '' %>><input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> /></span>
+        <span class="checkbox check" ><input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> /></span>
         <div class="todo_title"></div>
     </div>
     <div class="edit">
