Added another test and fixed some bugs

--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -1,7 +1,7 @@
 {% extends "layout/layout.html" %}
 {% block body %}
 	<div id="todos_app">
-        <div id="create_todo">
+        <div id="add_todo">
             <input id="todo_title" placeholder="What needs to get done?" type="text" />
            <span id="add_button"><a>Add Todo</a></span>
         </div>
