--- a/todos/static/templates/item.html
+++ b/todos/static/templates/item.html
@@ -1,4 +1,4 @@
-<div class="todo <%= done ? 'done' : '' %> <%= id%2 ? '' : 'blue' %>">
+<div class="todo <%= done ? 'done' : '' %> <%= order%2 ? '' : 'blue' %>">
     <div class="display">
         <span class="checkbox check" ><input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> /></span>
         <div class="todo_title"></div>
