added moving todos feature

--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -6,7 +6,7 @@
            <span id="add_button"><a>Add Todo</a></span>
         </div>
         <div id="todos">
-            <ul id="todo_list"> 
+            <ul id="todo_list" class="ui-sortable"> 
             </ul>
        </div>
         <div id="todo_stats"></div>
